<resources>
    <string name="app_name">Photoclicker</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello!</string>
    <string name="good_to_see_you_here">Good to see you here</string>
    <string name="register">register</string>
    <string name="sign_in">sign in</string>
    <string name="first_name">First name</string>
    <string name="password">Password</string>
    <string name="second_name">Second name</string>
    <string name="sign_in_1">Sign in</string>
    <string name="photo">photo</string>
    <string name="author_nobody">Author: nobody</string>
    <string name="similar">similar</string>
    <string name="save">save</string>
    <string name="name_surname">Name Surname</string>
    <string name="albums">Albums</string>
    <string name="add_picture">Add picture</string>
    <string name="add_album">Add album</string>
    <string name="exit">Exit</string>
    <string name="options">Options</string>
    <string name="edit">Edit</string>
    <string name="add_new_genre">Add new genre</string>
    <string name="add">Add</string>
    <string name="genre_name">Genre name</string>
    <string name="choose">Choose</string>
    <string name="name_just_picture">Name: Just Picture</string>
    <string name="album_name">Album name</string>
    <string name="name">Name</string>
    <string name="delete_album">Delete album</string>
    <string name="delete_photos">Delete photos</string>
    <string name="admin_added_your_photo">Admin added your photo!</string>
    <string name="download">download</string>
    <string name="genre">Genre</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="delete_account">Delete account</string>
    <string name="cancel">Cancel</string>
    <string name="edit_account">EDIT ACCOUNT</string>
    <string name="profile">PROFILE</string>
    <string name="albums_1">ALBUMS</string>
    <string name="delete">Delete</string>
</resources>