<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/notificationsFragment"
        android:title="@string/notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/accountFragment"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="ifRoom"/>
</menu>