<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.PhotoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/photo"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/picture_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/name_just_picture"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/picture_author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/author_nobody"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/download_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/similar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/similar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/download_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/download_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/similar_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/ic_wave_2"
        android:layout_alignParentBottom="true"
        tools:viewBindingIgnore="true" />
</RelativeLayout>