<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignInFragment">

    <TextView
        android:id="@+id/sign_in_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_1"
        android:textColor="@color/red_300"
        app:endIconMode="clear_text"
        android:fontFamily="sans-serif-medium"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/login_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_text_view"
        android:hint="@string/username"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/password_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_text_field"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:viewBindingIgnore="true"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>